<?xml version="1.0" encoding="utf-8"?>

<!--
 * Assignment #: HW03
 * File Name: Pflug_HW03 - fragment_create_task.xml
 * Full Name: Kristin Pflug
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskFragment">

    <TextView
        android:id="@+id/create_task_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:text="@string/create_task_name_label"
        app:layout_constraintEnd_toStartOf="@+id/create_task_name_textbox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_task_name_textbox"
        android:layout_width="239dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/create_task_name_hint_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_task_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:text="@string/create_task_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_name_label" />

    <TextView
        android:id="@+id/create_task_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/create_task_date_text"
        app:layout_constraintEnd_toStartOf="@+id/create_task_set_date_button"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/create_task_date_label"
        app:layout_constraintTop_toBottomOf="@+id/create_task_name_textbox"
        tools:text="asdf" />

    <Button
        android:id="@+id/create_task_set_date_button"
        android:layout_width="87dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_task_set_date_button_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_task_date_label"
        app:layout_constraintTop_toBottomOf="@+id/create_task_name_textbox" />

    <TextView
        android:id="@+id/create_task_priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="287dp"
        android:text="@string/create_task_priority_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_date_label" />

    <RadioGroup
        android:id="@+id/create_task_priority_radiogroup"
        android:layout_width="106dp"
        android:layout_height="121dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="207dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_priority_label">

        <RadioButton
            android:id="@+id/create_task_priority_high_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/create_task_priority_high_radio" />

        <RadioButton
            android:id="@+id/create_task_priority_medium_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/create_task_priority_medium_radio" />

        <RadioButton
            android:id="@+id/create_task_priority_low_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/create_task_priority_low_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/create_task_cancel_button"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_cancel_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_priority_radiogroup" />

    <Button
        android:id="@+id/create_task_submit_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/create_task_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/create_task_priority_radiogroup" />

</androidx.constraintlayout.widget.ConstraintLayout>