<?xml version="1.0" encoding="utf-8"?>

<!--
 * Assignment #: HW03
 * File Name: Pflug_HW03 - fragment_to_do_list.xml
 * Full Name: Kristin Pflug
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListFragment">

    <TextView
        android:id="@+id/task_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/to_do_task_count_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_task_button"
        android:layout_width="319dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_task_button_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/create_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_display_box"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="319dp"
        android:layout_height="56dp"
        android:layout_marginBottom="200dp"
        android:text="@string/create_task_button_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/task_display_box"
        android:layout_width="314dp"
        android:layout_height="101dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_count_label">

        <TextView
            android:id="@+id/task_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="75dp"
            android:text="@string/task_display_priority" />

        <TextView
            android:id="@+id/task_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:text="@string/task_display_date" />

        <TextView
            android:id="@+id/task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/task_display_name" />

        <TextView
            android:id="@+id/upcoming_tasks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/upcoming_tasks_label"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>